adding arrow sign

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <img src="./assets/kinder.png" alt="">
                     <h4 class="kinder-font">Kinder (3-6) Years</h4>
                     <p>Provide an environment in which they can touch things. You can display your fancy antiques and collectibles again when they are older.</p>
-                    <button class="kinder-a"><a class="kinder-a href="">Read More</a></button>
+                    <button class="kinder-a"><a class="kinder-a" href="">Read More</a></button>
                 </div>
                 <div class="elementary">
                     <img src="./assets/elementary.png" alt="">
@@ -80,6 +80,10 @@
                     <p>Provide an environment in which they can touch things. You can display your fancy antiques and collectibles again when they are older.</p>
                     <button class="middle-a"><a class="middle-a" href="">Read More</a></button>
                 </div>
+            </div>
+            <div class="arrow-icon">
+                <button class="arrow-icon-left"><i class="fa-solid fa-angle-left"></i></button>
+            <button class="arrow-icon-right"><i class="fa-solid fa-angle-right"></i></button>
             </div>
         </section>
     </main>
