--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="quicksand-normal-font">
     <header>
         <nav class="nav">
-                
+            <marquee class="marquee">Our admission process will start from 10th February</marquee>
                     <input type="checkbox"  id="check">
                     <label for="check" class="checkbtn">
                         <i class="fa-solid fa-bars"></i>
@@ -86,6 +86,64 @@
             <button class="arrow-icon-right"><i class="fa-solid fa-angle-right"></i></button>
             </div>
         </section>
+        <!-- End this section -->
+
+        <section class="Stories-section">
+            <div class="full-story">
+                <h3 class="story-heading">Our Stories</h3>
+            <div class="story">
+                <div class="story-bg story-one">
+                    <img src="./assets/story-1.png" alt="">
+                    <br>
+                    <button class="story-btn">November 19, 2019</button>
+                    <div class="story-text">
+                     <h4 class="story-bold">A fun toddler coloring training on classroom</h4>
+                    <p class="story-para">Beautiful branding for changes by Never Now in Australia.
+                        changes is a platform for open discussion in an inclusive and
+                        collaborative environment, providing the...</p>
+                    </div>
+                </div>
+                <div class="grid-for-story">
+                    <div class="story-bg" >
+                        <img src="./assets/story-2.png" alt="">
+                        <br>
+                        <button class="story-two-btn">November 19, 2019</button>
+                        <div class="story-text">
+                        <h3 class="story-two-para">Find out if a school fits thefamily’s needs</h3>
+                        </div>
+                    </div>
+                    <div class="story-bg">
+                        <img src="./assets/story-3.png" alt="">
+                        <br>
+                        <button class="story-two-btn">November 19, 2019</button>
+                        <div class="story-text">
+                         <h3 class="story-two-para">Summer math & literacy centres for kids</h3>
+                        </div>
+                    </div>
+                    <div class="story-bg">
+                        <img src="./assets/story-4.png" alt="">
+                        <br>
+                        <button class="story-two-btn">September 10, 2019</button>
+                        <div class="story-text">
+                         <h3 class="story-two-para">Classroom management techniques for new tutors</h3>
+                        </div>
+                    </div>
+                    <div class="story-bg">
+                        <img src="./assets/story-5.png" alt="">
+                        <br>
+                        <button class="story-two-btn">July 19, 2019</button>
+                        <div class="story-text">
+                        <h3 class="story-two-para">Conversation rhymes improve kids listening</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="view">
+                <button class="View-All">View All</button>
+            </div>
+            </div>
+            
+         </section>
     </main>
 
     <!-- End main -->
