--- a/index.html
+++ b/index.html
@@ -149,7 +149,40 @@
     <!-- End main -->
 
     <footer>
-
+        <section class="footer-bg">
+            <div class="parent-of-footer">
+                <div>
+                    <div class="logo-flex">
+                        <div>
+                            <img src="./assets/logo.png" alt="">
+                        </div>
+                        <div>
+                            <h3 class="kids-education">Kids <br> Education</h3>
+                        </div>
+                    </div>
+                    <p class="kids-para">We have many unique and special qualities that we find make all the difference when it comes to providing a healthy and happy learning environment for the children.</p>
+                </div>
+                <div class="About">
+                    <h3 id="About-School">About School</h3>
+                    <p>Home</p>
+                    <br>
+                    <p>About</p>
+                    <br>
+                    <p>Facilities</p>
+                    <br>
+                    <p>Admission</p>
+                </div>
+                <div>
+                    <h3 id="keep">Keep In Touch</h3>
+                    <div class="img-flex">
+                        <img src="./assets/fb.png" alt="">
+                        <img src="./assets/dribble.png" alt="">
+                        <img src="./assets/twitter.png" alt="">
+                        <img src="./assets/google+.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </footer>
 
     <!-- End footer -->
